--- a/src/components/ReposList/ReposList.module.css
+++ b/src/components/ReposList/ReposList.module.css
@@ -8,6 +8,8 @@
     list-style: none;
     padding: 16px;
     border: 1px solid rgba(0,0,0, 0.1);
+    border-radius: 8px;
+    background-color: rgb(225, 225, 0);
 }
 
 .itemName b, .itemLanguage b {
