--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,10 @@
     font-family: sans-serif;
 }
 
+body {
+    background-color: rgb(0, 0, 81);
+}
+
 .container {
     max-width: 960px;
     margin: 0 auto;
